# Netology

1.3/: homework1.3.1.cpp  homework1.3.2.cpp  homework1.3.3.cpp  homework1.3.4.cpp
1.5/: bubble_sort(max_to_min).cpp  homework1.5.1  homework1.5.1.cpp  homework1.5.2.cpp  homework1.5.3.cpp  homework1.5.4.cpp
1.6/: homework1.6.3.cpp
1.7/: swap.cpp
2.10/2.10.1/: CMakeLists.txt  source.cpp
2.10/2.10.2/: CMakeLists.txt
2.10/2.10.2/sources/: eq_triangle.cpp  figure.cpp  homework2_10_2.cpp  isos_triangle.cpp  parallelogram.cpp  print_info.cpp  quadrangle.cpp  rectangle.cpp  rhombus.cpp  right_triangle.cpp  square.cpp  triangle.cpp
2.10/2.10.2/sources/headers/: figure.h  print_info.h
2.11/2.11.1/: homework2_11_1.sln
2.11/2.11.2/: homework2_11_2.sln
2.11/2.11.3/: CMakeLists.txt
2.11/2.11.3/leaving/: leaving.cpp
2.11/2.11.3/leaving/LeaverDyn/: Leaver.h
2.11/2.11.4/: homework2_11_4.sln
2.11/2.11.5/: CMakeLists.txt
2.11/2.11.5/FiguresLib/sources/: eq_triangle.cpp  figure.cpp  isos_triangle.cpp  parallelogram.cpp  print_info.cpp  quadrangle.cpp  rectangle.cpp  rhombus.cpp  right_triangle.cpp  square.cpp  triangle.cpp
2.11/2.11.5/FiguresLib/sources/headers/: eq_triangle.h  figure.h  isos_triangle.h  parallelogram.h  print_info.h  quadrangle.h  rectangle.h  rhombus.h  right_triangle.h  square.h  triangle.h
2.13/: App.cpp  UnitTesting.sln  UnitTesting.vcxproj  UnitTesting.vcxproj.filters  extended_array.h
2.13/UnitTest/: UnitTest.cpp  UnitTest.vcxproj
2.2/: homework2.2.1.cpp  homework2.2.2  homework2.2.3.cpp
2.3/: homework2.3.1.cpp  homework2.3.2.cpp
2.4/: 2.4.1.cpp
2.4/2.4.1/: 2.4.1.cpp  homework2.4.1.cpp
2.4/2.4.2/: homework2.4.2.cpp
2.5/: 2.5.1.cpp  2.5.2.cpp  2.5.3.cpp
2.6/2.6.1/: homework2_6_1.cpp  homework2_6_1.sln  homework2_6_1.vcxproj  homework2_6_1.vcxproj.filters  math_func.cpp  math_func.h
2.6/2.6.2/: counter.cpp  counter.h  homework2_6_2.cpp  homework2_6_2.sln  homework2_6_2.vcxproj  homework2_6_2.vcxproj.filters
2.6/2.6.3/: eq_triangle.cpp  figure.cpp  homework2_6_3.cpp  homework2_6_3.sln  homework2_6_3.vcxproj  homework2_6_3.vcxproj.filters  isos_triangle.cpp  parallelogram.h  print_info.cpp  quadrangle.cpp  quadrangle.h  rectangle.cpp  rhombus.cpp  right_triangle.cpp  right_triangle.h  square.cpp  triangle.cpp
2.7/: homework2_7_1.cpp  homework2_7_2.cpp
2.8/2.8.1/: bad_length_error.cpp  bad_length_error.h  function.cpp  function.h  homework2_8_1.cpp  homework2_8_1.sln  homework2_8_1.vcxproj  homework2_8_1.vcxproj.filters
2.8/2.8.2/: eq_triangle.cpp  eq_triangle.h  figure.cpp  figure.h  homework2_8_2.cpp  homework2_8_2.sln  homework2_8_2.vcxproj  homework2_8_2.vcxproj.filters  invalid_figure_error.cpp  invalid_figure_error.h  isos_triangle.cpp  isos_triangle.h  parallelogram.cpp  print_info.cpp  quadrangle.cpp  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  right_triangle.cpp  square.h  triangle.cpp  triangle.h
2.9/: homework2_9_1.cpp  homework2_9_2.cpp
cppl-homeworks/: readme.md
cppl-homeworks/homework10_1/: CMakeLists.txt  main.cpp
cppl-homeworks/homework10_2/: CMakeLists.txt  main.cpp
cppl-homeworks/homework10_3/: CMakeLists.txt  main.cpp  my_uniqueptr.h
cppl-homeworks/homework11_1/: CMakeLists.txt  main.cpp  move_vec.h
cppl-homeworks/homework11_2/: CMakeLists.txt  big_int.cpp  big_int.h  main.cpp
cppl-homeworks/homework3_1/: main.cpp
cppl-homeworks/homework3_2/: CMakeLists.txt  main.cpp
cppl-homeworks/homework3_2/lib/: array_ex.cpp  smart_array.cpp  smart_array.h
cppl-homeworks/homework4_1/: CMakeLists.txt  List.h  main.cpp
cppl-homeworks/homework4_2/: CMakeLists.txt  List.cpp  main.cpp
cppl-homeworks/homework5_1/: CMakeLists.txt  main.cpp
cppl-homeworks/homework5_2/: CMakeLists.txt  main.cpp  table_templ.h
cppl-homeworks/homework5_3/: CMakeLists.txt  Counter.cpp  Counter.h  main.cpp
cppl-homeworks/homework7_1/: CMakeLists.txt  main.cpp
cppl-homeworks/homework7_2/: CMakeLists.txt  main.cpp
cppl-homeworks/homework7_3/: CMakeLists.txt  My_Vector_Templ.h  main.cpp
cppl-homeworks/homework8_1/: CMakeLists.txt  main.cpp
cppl-homeworks/homework8_2/: CMakeLists.txt  main.cpp  print_container.h
dpcpp-homeworks/homework1_1_2_3/: CMakeLists.txt  advanced_sql_query_builder.cpp  advanced_sql_query_builder.h  main.cpp  sql_query_builder.cpp  sql_query_builder.h
dpcpp-homeworks/homework2_1/: CMakeLists.txt  main.cpp
dpcpp-homeworks/homework2_2/: CMakeLists.txt  main.cpp
dpcpp-homeworks/homework3_1/: CMakeLists.txt  log.txt  main.cpp
dpcpp-homeworks/homework3_2/: CMakeLists.txt  E_Observer.cpp  E_Observer.h  FE_Observer.cpp  FE_Observer.h  Logger.cpp  Logger.h  Observer.h  W_Observer.cpp  W_Observer.h  error_log.txt  fatal_error_log.txt  main.cpp
dpcpp-homeworks/homework3_3/: CMakeLists.txt  E_Handler.cpp  E_Handler.h  FE_Handler.cpp  FE_Handler.h  Handler.cpp  Handler.h  LogMessage.cpp  LogMessage.h  Logger.cpp  Logger.h  U_Handler.cpp  U_Handler.h  W_Handler.cpp  W_Handler.h  error_log.txt  main.cpp
dpcpp-homeworks/homework4_1/: homework4.1.cpp
dpcpp-homeworks/homework4_2/: CMakeLists.txt  output.html  output.json
dpcpp-homeworks/homework4_2/include/: html_data.h  json_data.h  printable.h  save_to.h  text_data.h
dpcpp-homeworks/homework4_2/src/: html_data.cpp  json_data.cpp  main.cpp  save_to.cpp  text_data.cpp
homework2_3/: Data.cpp  main.cpp
map-homeworks/docker/: commands.txt
map-homeworks/homework1_1/: CMakeLists.txt  clients_queue.cpp  clients_queue.h  main.cpp  teller.cpp  teller.h
map-homeworks/homework1_2/: CMakeLists.txt  fill_vector.cpp  fill_vector.h  main.cpp  multi_sum.cpp  multi_sum.h
map-homeworks/homework2_1/: CMakeLists.txt
map-homeworks/homework2_2/: CMakeLists.txt  ConsoleParam.cpp  ConsoleParam.h  ProgressBar.cpp  ProgressBar.h  TableHeader.cpp  TableHeader.h  (+7 more)
map-homeworks/homework3_1/: CMakeLists.txt  main.cpp  print.cpp  print.h  selectionSort.cpp  selectionSort.h
qt-homeworks/homework2.1/: CMakeLists.txt  main.cpp
qt-homeworks/homework5.1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
(+86 files in other folders)
